force-app/main/default/objects/VS_AwardApproval__c/VS_AwardApproval__c.object-meta.xml
<CustomObject>
    <description>수주품의 관리 Obj</description>
    <label>Award Approval</label>
    <nameField>
        <label>Award Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Award Approvals</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>