force-app/main/default/objects/VS_AwardApproval__c/fields/AwardApprovalCode__c.field-meta.xml
<CustomField>
    <fullName>AwardApprovalCode__c</fullName>
    <label>Award Approval Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>