force-app/main/default/objects/VS_AwardApproval__c/fields/BaseCurrency__c.field-meta.xml
<CustomField>
    <fullName>BaseCurrency__c</fullName>
    <label>Base Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>