force-app/main/default/objects/VS_AwardApproval__c/fields/l_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>l_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Award Approvals</relationshipLabel>
    <relationshipName>Award_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>